--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shrikartare.github.io/chatbot-frontend",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
